# printfarm

./: .env.local.example  .gitignore  CLAUDE.md  CURSOR_CONTEXT.md  PRINTFARM_CONTEXT.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json  run-api.sh  run-web.sh
.cursor/rules/: backend.mdc  bridge.mdc  core.mdc  database.mdc  frontend.mdc  mobile.mdc  testing.mdc
apps/admin/: index.html  package.json  vite.config.ts
apps/admin-api/: package.json  tsconfig.json  vitest.config.ts
apps/admin-api/src/: env.ts  index.ts
apps/admin-api/src/lib/: db.ts  totp.ts
apps/admin-api/src/middleware/: auth.ts  rate-limit.ts
apps/admin/src/: main.tsx  routeTree.gen.ts
apps/ai-service/: .coverage  pyproject.toml
apps/ai-service/src/: main.py
apps/ai-service/src/api/: app.py
apps/ai-service/src/detection/: detector.py
apps/ai-service/src/utils/: image.py
apps/ai-service/tests/: test_api.py  test_detector.py  test_image.py
apps/api/: Dockerfile  package.json  vitest.config.ts
apps/api/src/: env.ts  index.ts
apps/bridge/: .coverage  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/bridge/src/: config.py  main.py
apps/bridge/src/api/: client.py
apps/bridge/src/camera/: stream.py
apps/bridge/src/mqtt/: client.py  handlers.py
apps/bridge/src/printers/: manager.py
apps/bridge/tests/: test_api_client.py  test_camera.py  test_config.py  test_handlers.py  test_main.py  test_manager.py  test_mqtt_client.py
apps/mobile/: app.json  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/src/: features.ts  test-utils.tsx
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: app.css  features.ts  main.tsx  routeTree.gen.ts  test-utils.tsx
(+98 files in other folders)
