[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "printfarm-ai-service"
version = "0.1.0"
description = "PrintFarm AI Service — YOLOv8 print failure detection"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ml = [
    "ultralytics>=8.2.0",
    "opencv-python-headless>=4.9.0",
    "openvino>=2024.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
